Created "time_period" anime feature

--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,211 +56,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 407,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num favourites: 9302 9302\n",
-      "9302\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>username</th>\n",
-       "      <th>user_completed</th>\n",
-       "      <th>experience</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>generation</th>\n",
-       "      <th>stats_episodes</th>\n",
-       "      <th>fav_genres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2255153</td>\n",
-       "      <td>karthiga</td>\n",
-       "      <td>49</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>3391</td>\n",
-       "      <td>[Comedy, Shounen, Action]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>37326</td>\n",
-       "      <td>Damonashu</td>\n",
-       "      <td>195</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>4903</td>\n",
-       "      <td>[Drama, Action, Sci-Fi]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>228342</td>\n",
-       "      <td>bskai</td>\n",
-       "      <td>414</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>9701</td>\n",
-       "      <td>[Comedy, Romance, School]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>61677</td>\n",
-       "      <td>Slimak</td>\n",
-       "      <td>224</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>7447</td>\n",
-       "      <td>[Action, Power, Super]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2485327</td>\n",
-       "      <td>MistButterfly</td>\n",
-       "      <td>3923</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>39703</td>\n",
-       "      <td>[Drama, Shounen, Comedy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9297</th>\n",
-       "      <td>363965</td>\n",
-       "      <td>purgatorio</td>\n",
-       "      <td>727</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>10701</td>\n",
-       "      <td>[Ecchi, Comedy, Action]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9298</th>\n",
-       "      <td>5180847</td>\n",
-       "      <td>Kagekori-chan</td>\n",
-       "      <td>497</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>11192</td>\n",
-       "      <td>[Action, Supernatural, Comedy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9299</th>\n",
-       "      <td>332815</td>\n",
-       "      <td>Sicka</td>\n",
-       "      <td>1912</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>13168</td>\n",
-       "      <td>[Action, Adventure, Comedy]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9300</th>\n",
-       "      <td>25554</td>\n",
-       "      <td>winry-chan</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>662</td>\n",
-       "      <td>[Comedy, Drama, Adventure]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9301</th>\n",
-       "      <td>4091949</td>\n",
-       "      <td>badking95</td>\n",
-       "      <td>1101</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>14012</td>\n",
-       "      <td>[Supernatural, Mystery, Vampire]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9302 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      user_id       username  user_completed experience  gender  generation  \\\n",
-       "0     2255153       karthiga              49     Active  Female  Millenials   \n",
-       "1       37326      Damonashu             195     Active    Male  Millenials   \n",
-       "2      228342          bskai             414    Veteran    Male  Millenials   \n",
-       "3       61677         Slimak             224    Veteran    Male  Millenials   \n",
-       "4     2485327  MistButterfly            3923    Veteran  Female  Millenials   \n",
-       "...       ...            ...             ...        ...     ...         ...   \n",
-       "9297   363965     purgatorio             727    Veteran    Male  Millenials   \n",
-       "9298  5180847  Kagekori-chan             497    Veteran  Female       Gen Z   \n",
-       "9299   332815          Sicka            1912    Veteran    Male  Millenials   \n",
-       "9300    25554     winry-chan               7    Regular  Female  Millenials   \n",
-       "9301  4091949      badking95            1101    Veteran    Male       Gen Z   \n",
-       "\n",
-       "      stats_episodes                        fav_genres  \n",
-       "0               3391         [Comedy, Shounen, Action]  \n",
-       "1               4903           [Drama, Action, Sci-Fi]  \n",
-       "2               9701         [Comedy, Romance, School]  \n",
-       "3               7447            [Action, Power, Super]  \n",
-       "4              39703          [Drama, Shounen, Comedy]  \n",
-       "...              ...                               ...  \n",
-       "9297           10701           [Ecchi, Comedy, Action]  \n",
-       "9298           11192    [Action, Supernatural, Comedy]  \n",
-       "9299           13168       [Action, Adventure, Comedy]  \n",
-       "9300             662        [Comedy, Drama, Adventure]  \n",
-       "9301           14012  [Supernatural, Mystery, Vampire]  \n",
-       "\n",
-       "[9302 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 407,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "Creating Additional User Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#CREATE \"GENERATION\" FEATURE\n",
     "#Convert birth years to generations\n",
@@ -271,14 +78,12 @@
     "\n",
     "uf[\"birth_date\"] = uf[\"birth_date\"].apply(get_birth_year)\n",
     "\n",
-    "uf = uf.rename(columns={\"birth_date\":\"generation\"})\n",
-    "\n",
     "#Assign generations based on birth year\n",
     "generations = [\n",
-    "    (uf[\"generation\"] >= 2013) & (uf[\"generation\"] <= 2025),\n",
-    "    (uf[\"generation\"] >= 1995) & (uf[\"generation\"] <= 2012),\n",
-    "    (uf[\"generation\"] >= 1980) & (uf[\"generation\"] <= 1994),\n",
-    "    (uf[\"generation\"] >= 1965) & (uf[\"generation\"] <= 1979)\n",
+    "    (uf[\"birth_date\"] >= 2013) & (uf[\"birth_date\"] <= 2025),\n",
+    "    (uf[\"birth_date\"] >= 1995) & (uf[\"birth_date\"] <= 2012),\n",
+    "    (uf[\"birth_date\"] >= 1980) & (uf[\"birth_date\"] <= 1994),\n",
+    "    (uf[\"birth_date\"] >= 1965) & (uf[\"birth_date\"] <= 1979)\n",
     "]\n",
     "\n",
     "gen_values = [\n",
@@ -287,6 +92,7 @@
     "    \"Millenials\",\n",
     "    \"Gen X\"\n",
     "]\n",
+    "uf = uf.rename(columns={\"birth_date\":\"generation\"})\n",
     "uf[\"generation\"] = np.select(generations, gen_values, default=uf[\"generation\"])\n",
     "\n",
     "#CREATE \"EXPERIENCE\" FEATURE\n",
@@ -329,7 +135,11 @@
     "#Only include top 10 highest rated anime per user\n",
     "merge_rf = merge_rf.groupby(\"username\").head(10)\n",
     "\n",
-    "#def single_user():                                                             \n",
+    "#def single_user():     \n",
+    "# \n",
+    "#     karthiga = ['Comedy', 'Shounen', 'Action']\n",
+    "#     Damonashu = ['Drama', 'Action', 'Sci-Fi']\n",
+    "#     bskai = ['Comedy', 'Romance', 'School']                                                        \n",
     "#    #Example user/ must make work for all users\n",
     "#    user = \"bskai\"\n",
     "#    user_ratings = merge_rf.loc[merge_rf[\"username\"]==user]\n",
@@ -359,8 +169,6 @@
     "\n",
     "#        fav_list.append(user_favs)\n",
     "\n",
-    "#test\n",
-    "fav_list = []\n",
     "fav_dict = {\"username\": [], \"fav_genres\":[]}\n",
     "for u, df in merge_rf.groupby(\"username\"):\n",
     "    user_ratings = merge_rf.loc[merge_rf[\"username\"]==u]\n",
@@ -388,21 +196,26 @@
     "        for i in range(0, user_genres.count(most_popular)):\n",
     "            user_genres.remove(most_popular)\n",
     "    \n",
-    "    fav_list.append(user_favs)\n",
     "    fav_dict[\"username\"].append(u)\n",
     "    fav_dict[\"fav_genres\"].append(user_favs)\n",
-    "    #uf.merge(uf, fav_dict, on=\"username\")\n",
-    "\n",
     "\n",
     "    \n",
     "    #print(user_ratings)\n",
+    "if ['Action','Comedy', 'Shounen'] in fav_dict[\"fav_genres\"]:\n",
+    "    print(f\"Found at position: {fav_dict['fav_genres'].index(['Action','Comedy', 'Shounen'])}, count: {fav_dict['fav_genres'].count(['Action','Comedy', 'Shounen'])}\")\n",
+    "else:\n",
+    "    print(\"Broken\")\n",
+    "\n",
+    "if ['Action', 'Drama', 'Sci-Fi'] in fav_dict[\"fav_genres\"]:\n",
+    "    print(f\"Found at position: {fav_dict['fav_genres'].index(['Action', 'Drama', 'Sci-Fi'])}, count: {fav_dict['fav_genres'].count(['Action', 'Drama', 'Sci-Fi'])}\")\n",
+    "else:\n",
+    "    print(\"Broken\")\n",
     "\n",
     "\n",
-    "print(f\"num favourites: {len(fav_list)}\", len(merge_rf.groupby(\"username\")))\n",
+    "print(f\"num favourites: {len(fav_dict['username'])}\", len(merge_rf.groupby(\"username\")))\n",
     "print(len(uf))\n",
     "#print(fav_list)\n",
     "\n",
-    "#uf[\"favourite_genres\"] = fav_list  \n",
     "fav_dict = pd.DataFrame(fav_dict)\n",
     "uf = pd.merge(uf, fav_dict, on=\"username\")\n",
     "\n",
@@ -414,32 +227,38 @@
     "\n",
     "#merge_rf\n",
     "\n",
-    "#add new-gen/classic feature\n",
-    "#change num_episodes to anime length feature\n",
+    "#user feature: preferred anime length (some anime have incorrectly got 0 episodes)\n",
+    "#  first -> add anime_length feature \n",
+    "#  change num_episodes to anime length feature\n",
+    "#  then  -> check if user prefers long or short anime\n",
+    "\n",
+    "#add new-gen/classic feature to anime\n",
+    "#check if users prefer new-gen/classic\n",
+    "#make sure that frequency difference between new and old is above a certain amount, otherwise put \"both\" as value\n",
+    "\n",
     "#user_id  |  fav_genre | preferred anime length | new-gen/classic\n",
     "#account for number of episodes watched\n",
+    "\n",
     "#get most popular genres \n",
     "#create the feature\n",
     "#limitation is that existing users' favourite genres are generated by implication compared to \n",
     "# new user who is asked directly\n",
     "\n",
-    "\n",
-    "#new features\n",
-    "#Favourite genre(s)\n",
-    "#Perferred anime length\n",
+    "#anime feature: popularity feature\n",
     "\n",
     "#4. see if any shows appear in multiple people's top 10 lists\n",
     "#Train set and test set\n",
     "#Then use lightfm in a new version\n",
-    "\n",
-    "#take propensity to rewatch: rewatched/watched (rw)\n",
-    "#take propensity to drop: dropped/watched (dr)\n",
-    "#cosine similarity of all users and movies takes a lot of resources"
+    "# encoding users: \n",
+    "# 1. encode fav_genres as bag of words\n",
+    "# 2. encode other features\n",
+    "# 3. join encoded genres with the rest of the vectorised features\n",
+    "#need to translate genres that user is asked to anime genres\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +270,13 @@
     }
    ],
    "source": [
+    "#CREATING time_period feature\n",
+    "\n",
+    "#new gen = >2010 \n",
+    "#if anime is currently airing new_gen \n",
+    "# if an anime is complete, if it aired before 2010 its old gen\n",
+    "\n",
+    "\n",
     "#Building a dictionary of all genres in a dataframe\n",
     "def build_genre_list(dataframe):\n",
     "\n",
