--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "[3507 rows x 11 columns]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,6 +414,9 @@
     "    \"famous\"\n",
     "]\n",
     "av[\"fame\"] = np.select(members, member_num, default=av[\"members\"])\n",
+    "from pathlib import Path\n",
+    "filepath = Path(\"D:\\dataset\\encoding\")\n",
+    "av.to_csv(r\"D:\\dataset\\encoding\\anime_frame.csv\")\n",
     "av\n",
     "#label encoding for normal fields\n",
     "#remember to split the data\n",
@@ -430,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +671,7 @@
        "[9302 rows x 10 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,6 +806,8 @@
     "fav_time_dict = pd.DataFrame(fav_time_dict)\n",
     "uf = pd.merge(uf, fav_time_dict, on=\"username\")\n",
     "#fav_time_dict\n",
+    "uf.to_csv(r\"D:\\dataset\\encoding\\user_frame.csv\")\n",
+    "merge_rf.to_csv(r\"D:\\dataset\\encoding\\ratings_frame.csv\")\n",
     "uf\n",
     "#print(fav_list)\n",
     "#user_ratings\n",
