filtered dataframes for embedding

--- a/recommendation.ipynb
+++ b/recommendation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "[3507 rows x 11 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
     "av[\"fame\"] = np.select(members, member_num, default=av[\"members\"])\n",
     "from pathlib import Path\n",
     "filepath = Path(\"D:\\dataset\\encoding\")\n",
-    "av.to_csv(r\"D:\\dataset\\encoding\\anime_frame.csv\")\n",
+    "av.to_csv(r\"D:\\dataset\\encoding\\anime_frame.csv\", index=False)\n",
     "av\n",
     "#label encoding for normal fields\n",
     "#remember to split the data\n",
@@ -433,15 +433,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found at position: 36, count: 179\n",
-      "Found at position: 12, count: 55\n",
+      "Found at position: 36, count: 198\n",
+      "Found at position: 87, count: 127\n",
       "num favourites: 9302 9302\n",
       "9302\n"
      ]
@@ -490,7 +490,7 @@
        "      <td>1990</td>\n",
        "      <td>3391</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Shounen, Action]</td>\n",
+       "      <td>[Comedy, Action, Shounen]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -504,7 +504,7 @@
        "      <td>4903</td>\n",
        "      <td>Millenials</td>\n",
        "      <td>[Drama, Action, Sci-Fi]</td>\n",
-       "      <td>New-Gen</td>\n",
+       "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -529,7 +529,7 @@
        "      <td>1988</td>\n",
        "      <td>7447</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Action, Super, Power]</td>\n",
+       "      <td>[Action, Power, Super]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -542,7 +542,7 @@
        "      <td>1992</td>\n",
        "      <td>39703</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Action, Historical, Sci-Fi]</td>\n",
+       "      <td>[Action, Sci-Fi, Historical]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -568,7 +568,7 @@
        "      <td>1993</td>\n",
        "      <td>10701</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Ecchi, Action]</td>\n",
+       "      <td>[Ecchi, Comedy, Action]</td>\n",
        "      <td>New-Gen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -607,7 +607,7 @@
        "      <td>1994</td>\n",
        "      <td>662</td>\n",
        "      <td>Millenials</td>\n",
-       "      <td>[Comedy, Shounen, Adventure]</td>\n",
+       "      <td>[Comedy, Drama, Adventure]</td>\n",
        "      <td>Classic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -643,21 +643,21 @@
        "9301  4091949      badking95            1101    Veteran    Male        1995   \n",
        "\n",
        "      stats_episodes  generation                       fav_genres  \\\n",
-       "0               3391  Millenials        [Comedy, Shounen, Action]   \n",
+       "0               3391  Millenials        [Comedy, Action, Shounen]   \n",
        "1               4903  Millenials          [Drama, Action, Sci-Fi]   \n",
        "2               9701  Millenials        [Comedy, Romance, School]   \n",
-       "3               7447  Millenials           [Action, Super, Power]   \n",
-       "4              39703  Millenials     [Action, Historical, Sci-Fi]   \n",
+       "3               7447  Millenials           [Action, Power, Super]   \n",
+       "4              39703  Millenials     [Action, Sci-Fi, Historical]   \n",
        "...              ...         ...                              ...   \n",
-       "9297           10701  Millenials          [Comedy, Ecchi, Action]   \n",
+       "9297           10701  Millenials          [Ecchi, Comedy, Action]   \n",
        "9298           11192       Gen Z   [Action, Supernatural, Comedy]   \n",
        "9299           13168  Millenials      [Comedy, Adventure, Action]   \n",
-       "9300             662  Millenials     [Comedy, Shounen, Adventure]   \n",
+       "9300             662  Millenials       [Comedy, Drama, Adventure]   \n",
        "9301           14012       Gen Z  [Supernatural, Mystery, Action]   \n",
        "\n",
        "     fav_anime_period  \n",
        "0             Classic  \n",
-       "1             New-Gen  \n",
+       "1             Classic  \n",
        "2             Classic  \n",
        "3             Classic  \n",
        "4             New-Gen  \n",
@@ -671,7 +671,7 @@
        "[9302 rows x 10 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,8 +806,8 @@
     "fav_time_dict = pd.DataFrame(fav_time_dict)\n",
     "uf = pd.merge(uf, fav_time_dict, on=\"username\")\n",
     "#fav_time_dict\n",
-    "uf.to_csv(r\"D:\\dataset\\encoding\\user_frame.csv\")\n",
-    "merge_rf.to_csv(r\"D:\\dataset\\encoding\\ratings_frame.csv\")\n",
+    "uf.to_csv(r\"D:\\dataset\\encoding\\user_frame.csv\",index = False)\n",
+    "merge_rf.to_csv(r\"D:\\dataset\\encoding\\ratings_frame.csv\", index = False)\n",
     "uf\n",
     "#print(fav_list)\n",
     "#user_ratings\n",
