--- a/embedding.ipynb
+++ b/embedding.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "import import_ipynb #requires pip install"
    ]
@@ -24,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,26 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\titot\\AppData\\Local\\Temp\\ipykernel_3664\\3300851371.py:17: SettingWithCopyWarning: \n",
+      "C:\\Users\\titot\\AppData\\Local\\Temp\\ipykernel_3664\\4206378690.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  user_row[y[\"fav_genres\"][0]] = 1\n",
-      "C:\\Users\\titot\\AppData\\Local\\Temp\\ipykernel_3664\\3300851371.py:18: SettingWithCopyWarning: \n",
+      "C:\\Users\\titot\\AppData\\Local\\Temp\\ipykernel_3664\\4206378690.py:18: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  user_row[y[\"fav_genres\"][1]] = 1\n",
-      "C:\\Users\\titot\\AppData\\Local\\Temp\\ipykernel_3664\\3300851371.py:19: SettingWithCopyWarning: \n",
+      "C:\\Users\\titot\\AppData\\Local\\Temp\\ipykernel_3664\\4206378690.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -171,10 +170,10 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>karthiga</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>Classic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -219,10 +218,10 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Damonashu</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>Classic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -267,10 +266,10 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>bskai</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>Classic</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -315,10 +314,10 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Slimak</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>Classic</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -363,10 +362,10 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>MistButterfly</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>New-Gen</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -459,10 +458,10 @@
        "    <tr>\n",
        "      <th>9297</th>\n",
        "      <td>purgatorio</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>New-Gen</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -507,10 +506,10 @@
        "    <tr>\n",
        "      <th>9298</th>\n",
        "      <td>Kagekori-chan</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>New-Gen</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -555,10 +554,10 @@
        "    <tr>\n",
        "      <th>9299</th>\n",
        "      <td>Sicka</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>Classic</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -603,10 +602,10 @@
        "    <tr>\n",
        "      <th>9300</th>\n",
        "      <td>winry-chan</td>\n",
-       "      <td>Regular</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Millenials</td>\n",
-       "      <td>Classic</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -651,10 +650,10 @@
        "    <tr>\n",
        "      <th>9301</th>\n",
        "      <td>badking95</td>\n",
-       "      <td>Veteran</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Gen Z</td>\n",
-       "      <td>New-Gen</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -702,23 +701,23 @@
        "</div>"
       ],
       "text/plain": [
-       "           username experience  gender  ... Romance Mecha  Martial\n",
-       "0          karthiga     Active  Female  ...       0     0        0\n",
-       "1         Damonashu     Active    Male  ...       0     0        0\n",
-       "2             bskai    Veteran    Male  ...       1     0        0\n",
-       "3            Slimak    Veteran    Male  ...       0     0        0\n",
-       "4     MistButterfly    Veteran  Female  ...       0     0        0\n",
-       "...             ...        ...     ...  ...     ...   ...      ...\n",
-       "9297     purgatorio    Veteran    Male  ...       0     0        0\n",
-       "9298  Kagekori-chan    Veteran  Female  ...       0     0        0\n",
-       "9299          Sicka    Veteran    Male  ...       0     0        0\n",
-       "9300     winry-chan    Regular  Female  ...       0     0        0\n",
-       "9301      badking95    Veteran    Male  ...       0     0        0\n",
+       "           username experience gender  ... Romance Mecha  Martial\n",
+       "0          karthiga          0      0  ...       0     0        0\n",
+       "1         Damonashu          0      1  ...       0     0        0\n",
+       "2             bskai          3      1  ...       1     0        0\n",
+       "3            Slimak          3      1  ...       0     0        0\n",
+       "4     MistButterfly          3      0  ...       0     0        0\n",
+       "...             ...        ...    ...  ...     ...   ...      ...\n",
+       "9297     purgatorio          3      1  ...       0     0        0\n",
+       "9298  Kagekori-chan          3      0  ...       0     0        0\n",
+       "9299          Sicka          3      1  ...       0     0        0\n",
+       "9300     winry-chan          2      0  ...       0     0        0\n",
+       "9301      badking95          3      1  ...       0     0        0\n",
        "\n",
        "[9302 rows x 45 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +728,7 @@
     "user_cols = users.loc[:, [\"username\", \"experience\",\"gender\", \"generation\",  \"fav_anime_period\"]]\n",
     "\n",
     "encoder = LabelEncoder()\n",
-    "\n",
+    "#Function to create a separate feature for each column and vectorize\n",
     "def genre_columns():\n",
     "\n",
     "    user_genres = users.loc[:, [\"username\", \"fav_genres\"]]\n",
@@ -753,9 +752,12 @@
     "        #bag_vector = tfidf.transform(genres)\n",
     "        \n",
     "        #print(bag_vector.toarray())\n",
-    "    return user_cols\n",
+    "    genre_cols = user_cols.loc[:, [\"username\", \"Vampire\", \"Supernatural\", \"Parody\", \"Samurai\", \"Space\", \"Military\", \"Sports\",\"Shoujo\", \n",
+    "    \"Music\", \"Mystery\",\t\"Harem\", \"Drama\", \"Magic\", \"Josei\", \"Psychological\", \"Horror\", \"Ai\", \"Power\", \"Kids\", \"Adventure\", \"Ecchi\", \"Super\", \"School\",\n",
+    "    \"Life\", \"Shounen\", \"Comedy\", \"Sci-Fi\", \"Action\", \"Thriller\", \"of\", \"Arts\", \"Game\", \"Seinen\", \"Slice\", \"Fantasy\", \"Police\",\"Historical\",\"Romance\",\"Mecha\",\"Martial\"]]\n",
+    "    return genre_cols\n",
     "    \n",
-    "#save encoded results to new file to make it faster\n",
+    "#Vectorise features of a single user\n",
     "def vectorize_single(user):\n",
     "    #Get row of one user\n",
     "    user_row = user_cols.loc[user_cols[\"username\"] == user]\n",
@@ -767,9 +769,10 @@
     "        #print(list(enc.classes_))\n",
     "        user_vector[col]=enc.transform(user_vector[col]) #encode each column of target user\n",
     "\n",
-    "    #return user_vector\n",
+    "    return user_vector\n",
     "\n",
-    "def vectorize_multiple():\n",
+    "#Vectorise features of all users in the dataframe\n",
+    "def vectorize_all():\n",
     "    all_users = user_cols.copy()\n",
     "\n",
     "    for user in user_cols[\"username\"]:\n",
@@ -780,9 +783,17 @@
     "    #K-Nearest Neighbours\n",
     "    #nb = KNeighborsClassifier(n_neighbors=5)\n",
     "    return all_users\n",
-    "#similar_users(\"karthiga\")\n",
-    "genre_columns()\n",
-    "#vectorize_multiple()\n",
+    "\n",
+    "#Construct final vector of encoded features\n",
+    "def construct_vectors():\n",
+    "    string_features = vectorize_all()\n",
+    "    genre_features = genre_columns()\n",
+    "    final_vector = pd.merge(string_features, genre_features, on = \"username\")\n",
+    "    return final_vector\n",
+    "\n",
+    "construct_vectors()\n",
+    "#genre_columns()\n",
+    "#vectorize_all()\n",
     "#user_cols\n",
     "# encoding users: \n",
     "# 1. encode fav_genres as bag of words: use term frequency vector for each\n",
@@ -793,17 +804,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>username</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>fav_anime_period</th>\n",
+       "      <th>Vampire</th>\n",
+       "      <th>Supernatural</th>\n",
+       "      <th>Parody</th>\n",
+       "      <th>Samurai</th>\n",
+       "      <th>Space</th>\n",
+       "      <th>Military</th>\n",
+       "      <th>Sports</th>\n",
+       "      <th>Shoujo</th>\n",
+       "      <th>Music</th>\n",
+       "      <th>Mystery</th>\n",
+       "      <th>Harem</th>\n",
+       "      <th>Drama</th>\n",
+       "      <th>Magic</th>\n",
+       "      <th>Josei</th>\n",
+       "      <th>Psychological</th>\n",
+       "      <th>Horror</th>\n",
+       "      <th>Ai</th>\n",
+       "      <th>Power</th>\n",
+       "      <th>Kids</th>\n",
+       "      <th>Adventure</th>\n",
+       "      <th>Ecchi</th>\n",
+       "      <th>Super</th>\n",
+       "      <th>School</th>\n",
+       "      <th>Life</th>\n",
+       "      <th>Shounen</th>\n",
+       "      <th>Comedy</th>\n",
+       "      <th>Sci-Fi</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Thriller</th>\n",
+       "      <th>of</th>\n",
+       "      <th>Arts</th>\n",
+       "      <th>Game</th>\n",
+       "      <th>Seinen</th>\n",
+       "      <th>Slice</th>\n",
+       "      <th>Fantasy</th>\n",
+       "      <th>Police</th>\n",
+       "      <th>Historical</th>\n",
+       "      <th>Romance</th>\n",
+       "      <th>Mecha</th>\n",
+       "      <th>Martial</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9301</th>\n",
+       "      <td>6443</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      username  experience  gender  ...  Romance  Mecha  Martial\n",
+       "9301      6443           3       1  ...        0      0        0\n",
+       "\n",
+       "[1 rows x 45 columns]"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vectorize_single(\"badking95\")\n",
-    "#print(user_genres)"
+    "vectorize_single(\"badking95\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +1088,7 @@
        "[3507 rows x 5 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1296,7 @@
        "[92932 rows x 9 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
