Completed K-Nearest Neighbours for existing user

--- a/neighbours.ipynb
+++ b/neighbours.ipynb
@@ -2,24 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n"
+    "from sklearn.neighbors import NearestNeighbors\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
     "users = pd.read_csv(r\"D:\\dataset\\encoding\\user_frame.csv\")\n",
-    "user_vectors = pd.read_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\")"
+    "user_vectors = pd.read_csv(r\"D:\\dataset\\encoding\\user_vectors.csv\")\n",
+    "rating_vectors = pd.read_csv(r\"D:\\dataset\\encoding\\ratings_frame.csv\")"
    ]
   },
   {
@@ -32,22 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_vectors\n",
     "encoder = LabelEncoder()\n",
     "final_vectors = user_vectors.copy()\n",
-    "\n",
     "x = encoder.fit(final_vectors[\"username\"])\n",
-    "print(encoder.classes_)\n",
+    "#print(encoder.classes_)\n",
     "username_enc = x.transform(final_vectors[\"username\"])\n",
     "username_enc\n",
     "\n",
+    "#adding encoded usernames to new dataframe\n",
     "final_vectors[\"username\"] = username_enc\n",
-    "final_vectors\n",
     "\n",
+    "#pd.set_option('display.max_rows', None)\n",
+    "final_arrays = final_vectors.values\n",
+    "#final_vectors.loc[final_vectors[\"username\"]==7537]\n",
     "#get username from number\n",
     "#encoder.inverse_transform([7537])"
    ]
@@ -62,10 +64,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>username</th>\n",
+       "      <th>user_completed</th>\n",
+       "      <th>experience</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>stats_episodes</th>\n",
+       "      <th>generation</th>\n",
+       "      <th>fav_genres</th>\n",
+       "      <th>fav_anime_period</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2255153</td>\n",
+       "      <td>karthiga</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>3391</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Comedy', 'Action', 'Shounen']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>502880</td>\n",
+       "      <td>lila94</td>\n",
+       "      <td>89</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>4204</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Action', 'Comedy', 'Shounen']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>416</th>\n",
+       "      <td>2120443</td>\n",
+       "      <td>hana_haruka</td>\n",
+       "      <td>110</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>4062</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Action', 'Shounen', 'Comedy']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3962</th>\n",
+       "      <td>71147</td>\n",
+       "      <td>gosakurago</td>\n",
+       "      <td>86</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>3329</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Action', 'Comedy', 'Shounen']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3132</th>\n",
+       "      <td>487038</td>\n",
+       "      <td>gorankudasai</td>\n",
+       "      <td>144</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>3513</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Action', 'Shounen', 'Comedy']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3507</th>\n",
+       "      <td>1263323</td>\n",
+       "      <td>mzpasaway13</td>\n",
+       "      <td>86</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>4150</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Action', 'Comedy', 'Shounen']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3037</th>\n",
+       "      <td>22536</td>\n",
+       "      <td>nawara</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>3257</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Comedy', 'Shounen', 'Action']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4223</th>\n",
+       "      <td>440913</td>\n",
+       "      <td>ninaka</td>\n",
+       "      <td>272</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>5788</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Comedy', 'Shounen', 'Action']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6068</th>\n",
+       "      <td>446074</td>\n",
+       "      <td>shirah0shi</td>\n",
+       "      <td>137</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>4640</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Action', 'Comedy', 'Shounen']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4301</th>\n",
+       "      <td>158358</td>\n",
+       "      <td>chibi_miyavi</td>\n",
+       "      <td>137</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>3561</td>\n",
+       "      <td>Millenials</td>\n",
+       "      <td>['Comedy', 'Shounen', 'Action']</td>\n",
+       "      <td>Classic</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      user_id      username user_completed experience  gender birth_date  \\\n",
+       "0     2255153  karthiga      49             Active     Female  1990        \n",
+       "68    502880   lila94        89             Active     Female  1994        \n",
+       "416   2120443  hana_haruka   110            Active     Female  1993        \n",
+       "3962  71147    gosakurago    86             Active     Female  1994        \n",
+       "3132  487038   gorankudasai  144            Active     Female  1992        \n",
+       "3507  1263323  mzpasaway13   86             Active     Female  1994        \n",
+       "3037  22536    nawara        49             Active     Female  1984        \n",
+       "4223  440913   ninaka        272            Active     Female  1992        \n",
+       "6068  446074   shirah0shi    137            Active     Female  1991        \n",
+       "4301  158358   chibi_miyavi  137            Active     Female  1992        \n",
+       "\n",
+       "     stats_episodes  generation                       fav_genres  \\\n",
+       "0     3391           Millenials  ['Comedy', 'Action', 'Shounen']   \n",
+       "68    4204           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
+       "416   4062           Millenials  ['Action', 'Shounen', 'Comedy']   \n",
+       "3962  3329           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
+       "3132  3513           Millenials  ['Action', 'Shounen', 'Comedy']   \n",
+       "3507  4150           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
+       "3037  3257           Millenials  ['Comedy', 'Shounen', 'Action']   \n",
+       "4223  5788           Millenials  ['Comedy', 'Shounen', 'Action']   \n",
+       "6068  4640           Millenials  ['Action', 'Comedy', 'Shounen']   \n",
+       "4301  3561           Millenials  ['Comedy', 'Shounen', 'Action']   \n",
+       "\n",
+       "     fav_anime_period  \n",
+       "0     Classic          \n",
+       "68    Classic          \n",
+       "416   Classic          \n",
+       "3962  Classic          \n",
+       "3132  Classic          \n",
+       "3507  Classic          \n",
+       "3037  Classic          \n",
+       "4223  Classic          \n",
+       "6068  Classic          \n",
+       "4301  Classic          "
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def neighbours():#function that returns a list of indexes of most similar users in \"final_arrays\" array\n",
+    "    user = np.array([7537,0,0,2,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,0,1,0,0,0,0,0,0,0,0,0,0,0,0])\n",
+    "    nc = NearestNeighbors(n_neighbors = 10, metric=\"cosine\") #euclidean\n",
+    "    \n",
+    "    train = nc.fit(final_arrays)\n",
+    "    n = train.kneighbors([user], return_distance=False)\n",
+    "    return n\n",
+    "\n",
+    "sim_names = []\n",
+    "neighbours = neighbours()\n",
+    "for i in neighbours[0]: #loop through nested array\n",
+    "    #print(final_arrays[i][0])\n",
+    "    name = x.inverse_transform([final_arrays[i][0]])\n",
+    "    sim_names.append(name)\n",
+    "\n",
+    "#build new dataframe of neighbours\n",
+    "neighbour_frame = pd.DataFrame()\n",
+    "for i in users.columns:\n",
+    "    neighbour_frame[i] = None\n",
+    "\n",
+    "for name in sim_names:\n",
+    "    user_row = users.loc[users[\"username\"]==name[0]]\n",
+    "    neighbour_frame = pd.concat([neighbour_frame, user_row])\n",
+    "neighbour_frame\n",
+    "\n",
+    "\n",
+    "#(final_vectors.columns)    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function that converts user information from website into vector"
+   ]
   }
  ],
  "metadata": {
